<resources>
    <string name="app_name">DodamDodam</string>
    <string name="DodamDodam">Dodam Dodam</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back</string>
    <string name="historyquestion_button">HistoryQuestion</string>
    <string name="nextMonth_button">NextMonth</string>
    <string name="prevMonth_button">PreviousMonth</string>
    <string name="upload_success">Upload Successful!</string>
    <string name="upload_failed">Upload Failed. Please try again.</string>
    <string name="add_button">Add Post</string>
    <string name="search_button">Search</string>
    <string name="gallery_button">Gallery</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>
    <string name="kakao_app_key">1eab06d74f71b2a4f53d54f7c9423784</string>
    <string name="profile_image">Profile Image</string>
    <string name="user_id">User ID</string>
    <string name="content_image">Content Image</string>
    <string name="explanation">Explanation</string>
    <string name="favorite_counter">Favorite Counter</string>
    <string name="comment">Comment</string>
    <string name="web_client_id">531374904571-ihis23sf17env6djlm7s4eb1c5i3cmrs.apps.googleusercontent.com</string>
</resources>