<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAF3F8"
    tools:context=".DiaryFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="MissingConstraints">
    <LinearLayout
        android:id="@+id/linearLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EAF3F8"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#EAF3F8"
            android:contentDescription="@string/back_button"
            app:srcCompat="@drawable/ic_back" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/addPost"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#EAF3F8"
            android:contentDescription="@string/add_button"
            android:onClick="onAddPostButtonClick"
            android:src="@drawable/ic_add" />

        <ImageButton
            android:id="@+id/search"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#EAF3F8"
            android:contentDescription="@string/search_button"
            android:onClick="onSearchButtonClick"
            android:text="Search"
            app:srcCompat="@drawable/search" />

        <ImageButton
            android:id="@+id/gallery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#EAF3F8"
            android:contentDescription="@string/gallery_button"
            app:srcCompat="@drawable/gallery" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EAF3F8"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutTop"
        app:layout_constraintBottom_toBottomOf="parent" />
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>